force-app/main/default/objects/EYI_Project_REC_Mapping__c/EYI_Project_REC_Mapping__c.object-meta.xml
<CustomObject>
    <label>Project REC Mapping</label>
    <nameField>
        <displayFormat>PRM-{00000}</displayFormat>
        <label>Project REC Mapping Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project REC Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>