force-app/main/default/objects/EYI_Project_REC_Mapping__c/fields/EYI_AOP_End_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_AOP_End_Date__c</fullName>
    <description>This field is used to capture end date of AOP.</description>
    <label>AOP End Date</label>
    <type>Date</type>
</CustomField>