force-app/main/default/objects/EYI_Project_REC_Mapping__c/fields/EYI_AOP_Remarks__c.field-meta.xml
<CustomField>
    <fullName>EYI_AOP_Remarks__c</fullName>
    <description>This field is used capture the remarks of AOP</description>
    <label>AOP Remarks</label>
    <type>TextArea</type>
</CustomField>