force-app/main/default/objects/EYI_Project_REC_Mapping__c/fields/EYI_AOP_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_AOP_Start_Date__c</fullName>
    <description>This field is used capture the start the date AOP.</description>
    <label>AOP Start Date</label>
    <type>Date</type>
</CustomField>