force-app/main/default/objects/EYI_Project_REC_Mapping__c/fields/EYI_Is_AOP__c.field-meta.xml
<CustomField>
    <fullName>EYI_Is_AOP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used for AOP capturing at Project Level.</description>
    <label>Is AOP ?</label>
    <type>Checkbox</type>
</CustomField>