force-app/main/default/objects/EYI_Project_REC_Mapping__c/fields/EYI_REC_Classification_Current__c.field-meta.xml
<CustomField>
    <fullName>EYI_REC_Classification_Current__c</fullName>
    <label>REC Classification Current</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P1</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>P3</fullName>
            </value>
            <value>
                <fullName>P4</fullName>
                <default>true</default>
                <label>P4</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>