force-app/main/default/objects/EYI_Project_REC_Mapping__c/fields/EYI_Sourcing_Manager_Text__c.field-meta.xml
<CustomField>
    <fullName>EYI_Sourcing_Manager_Text__c</fullName>
    <label>EYI Sourcing Manager Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>