force-app/main/default/objects/EYI_Project_REC_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EYI_Project__c</columns>
    <columns>EYI_REC_Account__c</columns>
    <columns>EYI_Sourcing_Manager__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EYI_REC_Account__c</field>
        <operation>equals</operation>
        <value>Kumarswami Mathapati</value>
    </filters>
    <label>All</label>
</ListView>